[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Stopwatch.gd" type="Script" id=10]
[ext_resource path="res://Sounds/metronome.wav" type="AudioStream" id=12]
[ext_resource path="res://Sounds/piano-slow-high.wav" type="AudioStream" id=13]

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MainMenuCamera" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Stopwatch" type="Node" parent="."]
script = ExtResource( 10 )

[node name="MetronomeSound" type="AudioStreamPlayer" parent="Stopwatch"]
stream = ExtResource( 12 )
volume_db = 14.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -2.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="TimerSound" to="." method="_on_TimerSound_finished"]
